--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <title>PasseLivre</title>
   <base href="/">
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:; default-src 'self' https://passe-livre-web.herokuapp.com/">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
+
+  <link http-equiv="Content-Security-Policy" 
+  href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link  rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 
